--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ moc_predefs.h
 qrc_qmlbench.cpp
 src/qmlbench
 tools/decidefps/decidefps
+tools/compareresults/compareresults
 .qmake.stash
 Makefile
 *.pro.user
