Make sure default surface format supports Qt Quick 3D
We need to pick an appropriate OpenGL version in order to
support all the QQ3D benchmarks. This also means we have
to move the setup for the surface format until after
initializing the GUI application, but having this before
is not actually needed in our case anyway.

Change-Id: I98ad3399b0a00aba7252f4c8b646a073c8ec1584
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ project(QMLBench
 set(QT_NO_INTERNAL_COMPATIBILITY_FUNCTIONS TRUE)
 # special case end
 
-find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Core Gui Qml Quick Test)
+find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Core Gui Qml Quick Test Quick3D)
 
 qt_build_repo_begin()
 
