Fix compositesingleton.qml benchmark
If we're going to add QML modules with qt_add_resources (which is a bad
idea, to be fixed separately), we should at least add complete QML
modules.

Change-Id: If029718c5c427dda4c62baeffed628869ef2d347
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Andrei Golubev <andrei.golubev@qt.io>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -210,7 +210,8 @@ set(qmlbench_resource_files
     "shared/butterfly-wide.png"
     "shared/alpha.png"
     "shared/solid.png"
-
+    "shared/qmldir"
+    "shared/Globals.qml"
 )
 
 qt_internal_add_resource(qmlbench "qmlbench"
