Fix usage of QtGraphicalEffects in tests
Change-Id: I2c6e2f71463a80ebf47ad2553ad9df8b0e2f29f3
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ qt_internal_add_executable(qmlbench
         Qt::Gui
         Qt::Quick
         Qt::Quick3D
+        Qt::Core5Compat
 )
 
 # Resources:
